crates/ars-components/src/date_time/date_picker/snapshots/ars_components__date_time__date_picker__tests__clear_trigger_empty.snap
---
source: crates/ars-components/src/date_time/date_picker/tests.rs
expression: snapshot_attrs(&api.clear_trigger_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "clear-trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "date-picker",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Clear date",
            ),
        ),
        (
            Hidden,
            Bool(
                true,
            ),
        ),
        (
            Id,
            String(
                "date-picker-clear-trigger",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
