crates/ars-components/src/date_time/date_picker/snapshots/ars_components__date_time__date_picker__tests__control.snap
---
source: crates/ars-components/src/date_time/date_picker/tests.rs
expression: snapshot_attrs(&api.control_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "control",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "date-picker",
            ),
        ),
        (
            Id,
            String(
                "date-picker-control",
            ),
        ),
    ],
    styles: [],
}
