crates/ars-components/src/date_time/date_picker/snapshots/ars_components__date_time__date_picker__tests__description.snap
---
source: crates/ars-components/src/date_time/date_picker/tests.rs
expression: snapshot_attrs(&api.description_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "description",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "date-picker",
            ),
        ),
        (
            Id,
            String(
                "date-picker-description",
            ),
        ),
    ],
    styles: [],
}
