crates/ars-components/src/date_time/date_picker/snapshots/ars_components__date_time__date_picker__tests__hidden_input_empty.snap
---
source: crates/ars-components/src/date_time/date_picker/tests.rs
expression: snapshot_attrs(&api.hidden_input_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "hidden-input",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "date-picker",
            ),
        ),
        (
            Name,
            String(
                "date",
            ),
        ),
        (
            Type,
            String(
                "hidden",
            ),
        ),
        (
            Value,
            String(
                "",
            ),
        ),
    ],
    styles: [],
}
