crates/ars-components/src/date_time/date_picker/snapshots/ars_components__date_time__date_picker__tests__input_invalid.snap
---
source: crates/ars-components/src/date_time/date_picker/tests.rs
expression: snapshot_attrs(&api.input_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "input",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "date-picker",
            ),
        ),
        (
            Aria(
                Expanded,
            ),
            String(
                "false",
            ),
        ),
        (
            Aria(
                HasPopup,
            ),
            String(
                "dialog",
            ),
        ),
        (
            Aria(
                Invalid,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "date-picker-label",
            ),
        ),
        (
            Aria(
                Controls,
            ),
            String(
                "date-picker-content",
            ),
        ),
        (
            Aria(
                DescribedBy,
            ),
            String(
                "date-picker-error-message",
            ),
        ),
        (
            Id,
            String(
                "date-picker-input",
            ),
        ),
        (
            Type,
            String(
                "text",
            ),
        ),
        (
            Value,
            String(
                "",
            ),
        ),
    ],
    styles: [],
}
